--- a/Class6Demo/Base.lproj/Main.storyboard
+++ b/Class6Demo/Base.lproj/Main.storyboard
@@ -209,24 +209,12 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rEI-gH-omf">
-                                <rect key="frame" x="155" y="552" width="73" height="37"/>
+                                <rect key="frame" x="151" y="583" width="73" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <state key="normal" title="Share"/>
                                 <connections>
                                     <action selector="onShare:" destination="hf2-Ih-mZ7" eventType="touchUpInside" id="cJr-Pf-GPZ"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GYN-ac-X44">
-                                <rect key="frame" x="71" y="323" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dCt-LD-q37">
-                                <rect key="frame" x="142" y="459" width="99" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Upload Image"/>
-                                <connections>
-                                    <action selector="onChooseImage:" destination="hf2-Ih-mZ7" eventType="touchUpInside" id="uF9-6f-M3n"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Say Something:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Efa-5p-TkZ">
@@ -236,6 +224,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="NoImage" translatesAutoresizingMaskIntoConstraints="NO" id="GYN-ac-X44">
+                                <rect key="frame" x="73" y="321" width="228" height="228"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="HIb-dG-wyY" appends="YES" id="L7V-eI-ezs"/>
+                                </connections>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ltF-c4-j6j"/>
@@ -247,8 +243,13 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HOp-Fd-qyZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="HIb-dG-wyY">
+                    <connections>
+                        <action selector="onChooseImage:" destination="hf2-Ih-mZ7" id="Whu-rd-oVg"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="809" y="103"/>
+            <point key="canvasLocation" x="808.79999999999995" y="102.70935960591133"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="XQS-lT-ceH">
@@ -759,6 +760,7 @@
     <resources>
         <image name="Feed" width="30" height="30"/>
         <image name="Logo" width="1200" height="1200"/>
+        <image name="NoImage" width="1080" height="1080"/>
         <image name="User" width="30" height="30"/>
         <image name="avatar" width="210" height="240"/>
     </resources>
